bld script and bldr tools cleanup